# compras

./: .gitignore  README.md  pyproject.toml
src/consad/: __init__.py  config_reader.py  database_driver.py  utils.py
src/consad/static/css/: bvselect.css  compras.css  style.css  topcoat-desktop-dark.css  topcoat-desktop-light.css
src/consad/static/js/: bvselect.js  module.js
src/consad/templates/: 404.html  500.html  about.html  captura.html  catalogo.html  welcome.html
src/data_object/: __init__.py  models.py
src/data_objects/: __init__.py
test/: test_database.py
